追加の修正

--- a/vol2.html
+++ b/vol2.html
@@ -52,42 +52,44 @@
                 </a>
             </div>
             <div class="scroll-box">
-                <div class="block1"></div>
-                <div class="block2"></div>
-                <div class="block3"></div>
+                <div class="scroll-block1"></div>
+                <div class="scroll-block2"></div>
+                <div class="scroll-block3"></div>
             </div>
             <div class="scroll-inner">
-                <div class="mainvisual scroll-in">
-                    <div class="page-main-logo">
-                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/ttl_logo.png" width="884" height="407" alt="しりあがり寿 meets にこあんど...">
-                    </div>
-                    <div class="yoyaku">
-                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/yoyaku-pc.png" width="111" height="152" alt="令和6年1月5日予約受付中">
-                    </div>
-                    <div class="heading">
-                        <p class="heading-ttl">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-heading-ttl.png" width="161" height="285" alt="">
-                        </p>
-                        <p class="heading-txt heading-txt1">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/page2-heading-txt.png" width="418" height="327" alt="">
-                        </p>
-                    </div>
-                    <div class="page2-main">
-                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/vol2-main.png" width="750" height="824" alt="">
-                    </div>
-
-                    <div class="page-ofuda">
-                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-ofuda.png" width="67" height="314" alt="第一弾 葛飾北斎">
-                    </div>
-
-                    <div class="modal-link">
-                        <div class="modal-txt">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/page2-modal-txt.png" width="249" height="108" alt="しりあがり寿 先生のご紹介">
+                <div class="mainvisual-wrapper">
+                    <div class="mainvisual scroll-in">
+                        <div class="page-main-logo">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/ttl_logo.png" width="884" height="407" alt="しりあがり寿 meets にこあんど...">
                         </div>
-                        <div class="modal-btn">
-                            <span class="plus">
-                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/plus.png" width="11" height="11" alt="">
-                            </span>
+                        <div class="yoyaku">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/yoyaku-pc.png" width="111" height="152" alt="令和6年1月5日予約受付中">
+                        </div>
+                        <div class="heading">
+                            <p class="heading-ttl">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-heading-ttl.png" width="161" height="285" alt="">
+                            </p>
+                            <p class="heading-txt heading-txt1">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/page2-heading-txt.png" width="418" height="327" alt="">
+                            </p>
+                        </div>
+                        <div class="page2-main">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/vol2-main.png" width="750" height="824" alt="">
+                        </div>
+    
+                        <div class="page-ofuda">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-ofuda.png" width="67" height="314" alt="第一弾 葛飾北斎">
+                        </div>
+    
+                        <div class="modal-link">
+                            <div class="modal-txt">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/page2-modal-txt.png" width="249" height="108" alt="しりあがり寿 先生のご紹介">
+                            </div>
+                            <div class="modal-btn">
+                                <span class="plus">
+                                    <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/plus.png" width="11" height="11" alt="">
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -132,7 +134,7 @@
                                     </div>
 
                                 </div>
-                                <p class="detail">北斎の浮世絵といえばこれ！というあの有名作品も、たっぷりのルーがかかったカツカレー越しの富士山もクッションになって登場。置くだけで、リビングが驚くほどアートな空間に。</p>
+                                <p class="detail">ダイナミックな波とともに描かれた舟に乗る動物たちや、たっぷりのルーがかかったカツカレー越しの富士山もクッションになって登場。置くだけで、リビングが驚くほどアートな空間に。</p>
                             </div>
                         </div>
                         <div class="item-block block3 scroll-in">
@@ -377,13 +379,15 @@
 
 
 
-                <div class="footer scroll-in">
-                    <div class="footer-main-img">
-                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/footer_mainvisual.png" width="658" height="628" alt="">
-                        <div class="ofuda">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-ofuda.png" width="67" height="314" alt="">
+                <div class="footer">
+                    <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401">
+                        <div class="footer-main-img">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/footer_mainvisual.png" width="658" height="628" alt="">
+                            <div class="ofuda">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-ofuda.png" width="67" height="314" alt="">
+                            </div>
                         </div>
-                    </div>
+                    </a>
 
                     <p class="footer-txt">
                         第一弾は鳥獣戯画を現代風に再現！<br>
@@ -395,6 +399,7 @@
                     <p class="credit">
                         Photo_ Erina Takahashi<br>
                         Text_ Noriko Oba<br>
+                        Development_Rui Kikuchi(Rhino inc.)<br>
                         Web Direction&Design_Hiroaki Takatori
                     </p>
                     <p class="copyright">
@@ -415,12 +420,14 @@
                     <div class="prof-img">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/prof-img.png" width="179" height="179" alt="">
                     </div>
-                    <p class="prof-ttl">
-                        PROFILE
-                    </p>
-                    <p class="prof-txt">
-                        1985年単行本『エレキな春』で漫画家としてデビュー。 新聞の風刺4コママンガから長編ストーリーマンガまで、様々な ジャンルで独自な活動を続ける一方、近年では映像、アートなど マンガ以外の多方面に創作の幅を広げている。
-                    </p>
+                    <div class="prof-detail">
+                        <p class="prof-ttl">
+                            PROFILE
+                        </p>
+                        <p class="prof-txt">
+                            1985年単行本『エレキな春』で漫画家としてデビュー。 新聞の風刺4コママンガから長編ストーリーマンガまで、様々な ジャンルで独自な活動を続ける一方、近年では映像、アートなど マンガ以外の多方面に創作の幅を広げている。
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
