--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="main-ttl-wrapper">
             <div class="main-ttl-background">
-                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/tobira-background.png" width="629" height="1536" alt="">
+                <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/tobira-background.png" width="629" height="1536" alt=""> -->
             </div>
             <div class="main-ttl">
                 <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/ttl_logo.png" width="884" height="407" alt="">
