アニメーションの調整

--- a/vol1.html
+++ b/vol1.html
@@ -212,7 +212,7 @@
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/crown-deco2.png" width="263" height="92" alt="">
                         </div>
                     </div>
-                    <div class="item-block block4">
+                    <div class="item-block block4 scroll-in">
                         <a href="https://www.dot-st.com/disp/itemlist/?q=101894&userinput=" target="_blank" rel="noopener" class="ph-link">
                             <div class="ph ph1 scroll-in">
                                 <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item4-1.png" width="856" height="954" alt="">
