--- a/index.html
+++ b/index.html
@@ -31,24 +31,14 @@
                     <p class="heading-ttl">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-heading-ttl.png" width="165" height="225" alt="">
                     </p>
-                    <p class="heading-txt heading-txt1">
-                        おや…？ディスコで踊って、<br>
-                        スナックで飲んで歌って、<br>
-                        野球や漫才をしているのは、<br>
-                        800年前の絵巻から<br>
-                        現代に飛び出してきた<br>
-                        鳥獣たち?!<br>
-                        しりあがり寿さんが<br>
-                        いたずら心たっぷりで<br>
-                        描く「鳥獣戯画」のパロディ。
-                    </p>
-                    <p class="heading-txt heading-txt2">
-                        おめでたいアイテムと共に<br>
-                        新年をお祝いしませんか？
-                    </p>
+                    <div class="heading-txt">
+                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1-heading-txt.png" width="835" height="516" alt="">
+                    </div>
                 </div>
                 <div class="page1-main">
-                    <img class="pc" decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_main.jpg" width="1060" height="1536" alt="">
+                    <div class="page1-main-pc pc">
+                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_main.png" width="881" height="841" alt="">
+                    </div>
                     <img class="sp" decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_main-sp.png" width="542" height="518" alt="">
                 </div>
                 <div class="page-ofuda">
@@ -81,22 +71,8 @@
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-heading-ttl.png" width="165" height="225" alt="">
                     </p>
                     <p class="heading-txt heading-txt1">
-                        漫画家・アーティストの<br>
-                        しりあがり寿さんが、<br>
-                        あの天才絵師、葛飾北斎の<br>
-                        浮世絵をユーモラスな<br>
-                        視点でパロディ化。<br>
-                        クスッと笑える絵柄を使って、<br>
-                        ニコアンドが<br>
-                        雑貨アイテムにしました。<br>
-                        自分用にも、贈り物としても<br>
-                        うれしいアイテムの数々。
+                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2-heading-txt.png" width="907" height="534" alt="">
                     </p>
-                    <p class="heading-txt heading-txt2">
-                        手に取れば、毎日が今より<br>
-                        ちょっと楽しくなるかも。
-                    </p>
-                 
                     <div class="yoyaku-ofuda">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/yoyaku-pc.png" width="111" height="152" alt="予約受付中">
                     </div>
