--- a/vol2.html
+++ b/vol2.html
@@ -229,7 +229,7 @@
                                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
                                     </a>
                                 </div>
-                                <p class="detail">ずっと触っていたくなる触り心地のクッションは珍しい猫柄もラインナップ。猫って、動物がたくさん登場する鳥獣戯画の中でも甲巻に1度しか登場しないレアキャラなんですよ。</p>
+                                <p class="detail">朱肉付きで便利な印鑑ケース。レトロなかわいさも魅力のがま口タイプで、パカっと開ければ内側には上品な色がちらり。同僚や友人の結婚のお祝いにプレゼントするのもおすすめです。</p>
                             </div>
                         </div>
                         <div class="item-block block8 scroll-in">
@@ -262,9 +262,15 @@
                             </a>
                             <div class="txt-contents scroll-in">
                                 <p class="name">アートボード </p>
-                                <div class="credit">
-                                    <p class="price">3,520円<span class="tax">税込</span></p>
-                                    <a href="https://www.dot-st.com/nikoand/disp/itemlist/?dispNo=002005231002001" target="_blank" rel="noopener" class="buy-btn">
+                                <div class="credit credit1">
+                                    <p class="price">（滝）3,520円<span class="tax">税込</span></p>
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2991531" target="_blank" rel="noopener" class="buy-btn">
+                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                    </a>
+                                </div>
+                                <div class="credit credit2">
+                                    <p class="price">（カレー）3,520円<span class="tax">税込</span></p>
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2991530" target="_blank" rel="noopener" class="buy-btn">
                                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
                                     </a>
                                 </div>
@@ -358,7 +364,7 @@
                         <p class="info-ttl">
                             インスタグラム<br>
                             ニコアンド TOOLS公式アカウントで<br>
-                            ARフィルターを配布中！
+                            1/5に配布予定！
                         </p>
                         <div class="phone-illust">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/phone.png" width="268" height="568" alt="">
@@ -371,7 +377,7 @@
                                 niko and ... TOOLSのアカウント
                             </div>
                         </a>
-                        <a class="allitems" href="https://www.dot-st.com/nikoand/disp/itemlist/?dispNo=002005231" target="_blank">
+                        <a class="allitems" href="https://www.dot-st.com/nikoand/disp/itemlist/?dispNo=002005231002" target="_blank">
                             第二弾のすべての商品はこちら
                         </a>
                     </div>
