--- a/vol1.html
+++ b/vol1.html
@@ -81,6 +81,7 @@
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-modal-txt.png" width="249" height="108" alt="しりあがり寿 先生のご紹介">
                         </div>
                         <div class="modal-btn">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/plus-background.png" width="56" height="56" alt="">
                             <span class="plus">
                                 <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/plus.png" width="11" height="11" alt="">
                             </span>
@@ -257,13 +258,13 @@
                         <div class="txt-contents scroll-in">
                             <p class="name">茶筒</p>
                             <div class="credit credit1">
-                                <p class="price">（220ml）1,100円<span class="tax">税込</span></p>
+                                <p class="price">（200g）1,100円<span class="tax">税込</span></p>
                                 <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2992120" target="_blank" rel="noopener" class="buy-btn">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/buy-btn.png" width="80" height="39" alt="">
                                 </a>
                             </div>
                             <div class="credit credit2">
-                                <p class="price">（150ml）900円<span class="tax">税込</span></p>
+                                <p class="price">（150g）900円<span class="tax">税込</span></p>
                                 <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2992119" target="_blank" rel="noopener" class="buy-btn">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/buy-btn.png" width="80" height="39" alt="">
                                 </a>
@@ -370,13 +371,13 @@
                             <p class="name">コンパクトミラー</p>
                             <div class="credit credit1">
                                 <p class="price">（四角）1,100円<span class="tax">税込</span></p>
-                                <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2994689" target="_blank" rel="noopener" class="buy-btn">
+                                <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2994688" target="_blank" rel="noopener" class="buy-btn">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/buy-btn.png" width="80" height="39" alt="">
                                 </a>
                             </div>
                             <div class="credit creidt2">
                                 <p class="price">（丸）1,100円<span class="tax">税込</span></p>
-                                <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2994688" target="_blank" rel="noopener" class="buy-btn">
+                                <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2994689" target="_blank" rel="noopener" class="buy-btn">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/buy-btn.png" width="80" height="39" alt="">
                                 </a>
                             </div>
@@ -732,7 +733,7 @@
                     <p class="info-ttl">
                         インスタグラム<br>
                         ニコアンド TOOLS公式アカウントで<br>
-                        ARフィルターを配布中！
+                        1/5に配布予定！
                     </p>
                     <div class="phone-illust">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/phone-background.png" width="268" height="568" alt="">
@@ -742,9 +743,9 @@
                         <div class="deco-illust2 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco18.png" width="273" height="321" alt="">
                         </div>
-                        <div class="deco-illust3 scroll-in">
+                        <!-- <div class="deco-illust3 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco20.png" width="314" height="356" alt="">
-                        </div>
+                        </div> -->
                         <div class="deco-kirakira1">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/kirakira-deco1.png" width="125" height="162" alt="">
                         </div>
