--- a/vol1.html
+++ b/vol1.html
@@ -733,7 +733,7 @@
                     <p class="info-ttl">
                         インスタグラム<br>
                         ニコアンド TOOLS公式アカウントで<br>
-                        1/5に配布予定！
+                        ARフィルターを配布中！
                     </p>
                     <div class="phone-illust">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/phone-background.png" width="268" height="568" alt="">
