--- a/vol2.html
+++ b/vol2.html
@@ -42,7 +42,7 @@
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/btn-sankaku.png" width="9" height="10">
                     </span>
                 </a>
-                <a href="https://www.dot-st.com/nikoand/disp/itemlist/?dispNo=002005231" target="_blank" rel="noopener" class="allitems">
+                <a href="https://www.dot-st.com/nikoand/disp/itemlist/?dispNo=002005231002" target="_blank" rel="noopener" class="allitems">
                     <div class="txt-img">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/page2-allitem.png" width="177" height="25" alt="第二弾 商品一覧">
                     </div>
@@ -201,8 +201,9 @@
                                         <p class="name">フロアマット</p>
                                         <div class="credit">
                                             <p class="price">1,980円<span class="tax">税込</span></p>
-                                            <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2992032" target="_blank" rel="noopener" class="buy-btn">
-                                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                            <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2992032" target="_blank" rel="noopener" class="buy-btn coming">
+                                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/coming-soon.jpg" width="185" height="39" alt="">
+                                                <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt=""> -->
                                             </a>
                                         </div>
                                     </div>
@@ -225,8 +226,9 @@
                                 <p class="name">印鑑ケース</p>
                                 <div class="credit">
                                     <p class="price">1,760円<span class="tax">税込</span></p>
-                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989985" target="_blank" rel="noopener" class="buy-btn">
-                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989985" target="_blank" rel="noopener" class="buy-btn coming">
+                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/coming-soon.jpg" width="185" height="39" alt="">
+                                        <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt=""> -->
                                     </a>
                                 </div>
                                 <p class="detail">朱肉付きで便利な印鑑ケース。レトロなかわいさも魅力のがま口タイプで、パカっと開ければ内側には上品な色がちらり。同僚や友人の結婚のお祝いにプレゼントするのもおすすめです。</p>
@@ -247,8 +249,9 @@
                                 <p class="name">ティッシュポーチ</p>
                                 <div class="credit">
                                     <p class="price">1,980円<span class="tax">税込</span></p>
-                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989983" target="_blank" rel="noopener" class="buy-btn">
-                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989983" target="_blank" rel="noopener" class="buy-btn coming">
+                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/coming-soon.jpg" width="185" height="39" alt="">
+                                        <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt=""> -->
                                     </a>
                                 </div>
                                 <p class="detail">リップやガジェット類など、バッグの中身を整理整頓できるポーチはいくつあっても困らないもの。滝からすべり落ちるアトラクションや逃走する馬など躍動感あふれる絵柄は、持っているだけで楽しい気分に。</p>
@@ -304,14 +307,16 @@
                                 <p class="name">巾着</p>
                                 <div class="credit credit1">
                                     <p class="price">（S）1,100円<span class="tax">税込</span></p>
-                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989980" target="_blank" rel="noopener" class="buy-btn">
-                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989980" target="_blank" rel="noopener" class="buy-btn coming">
+                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/coming-soon.jpg" width="185" height="39" alt="">
+                                        <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt=""> -->
                                     </a>
                                 </div>
                                 <div class="credit credit2">
                                     <p class="price">（M）1,320円<span class="tax">税込</span></p>
-                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989981" target="_blank" rel="noopener" class="buy-btn">
-                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2989981" target="_blank" rel="noopener" class="buy-btn coming">
+                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/coming-soon.jpg" width="185" height="39" alt="">
+                                        <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt=""> -->
                                     </a>
                                 </div>
                                 <p class="detail">表裏別柄で二つの柄が楽しめちゃう。紐もアクセントカラーになっているのがポイント。日本古来の袋物として親しまれている巾着は、お土産にも最適です。</p>
@@ -349,8 +354,9 @@
                                 <p class="name">傘</p>
                                 <div class="credit">
                                     <p class="price">1,540円<span class="tax">税込</span></p>
-                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2987204" target="_blank" rel="noopener" class="buy-btn">
-                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
+                                    <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2987204" target="_blank" rel="noopener" class="buy-btn coming">
+                                        <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/coming-soon.jpg" width="185" height="39" alt="">
+                                        <!-- <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt=""> -->
                                     </a>
                                 </div>
                                 <p class="detail">アーティスティックスイミングの選手たちが傘をぐるりと囲んだ圧巻のデザイン。冷たい雨に打たれながらも、美しい技を完璧に決めて、見事な演技を見せてくれる選手たちに拍手！</p>
